--- a/app/src/main/res/layout/view_applock_blur_bottom.xml
+++ b/app/src/main/res/layout/view_applock_blur_bottom.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/view_applock_float_layout_bg_icon"
-        android:layout_width="379dp"
-        android:layout_height="379dp"
-        android:translationX="153dp"
-        android:layout_gravity="right|center_vertical"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:translationX="30dp"
+        android:layout_gravity="left|center_vertical"
         android:src="@mipmap/ic_launcher"
         tools:ignore="ContentDescription" />
 
