--- a/app/src/main/res/layout/item_app_child.xml
+++ b/app/src/main/res/layout/item_app_child.xml
@@ -1,46 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="48dp"
-              android:orientation="horizontal">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_music_item_container"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:background="@color/white"
+    android:orientation="horizontal"
+    tools:ignore="SpUsage,ContentDescription">
 
     <ImageView
         android:id="@+id/iv_app_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="16dp"/>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/bg_item_main_storage_list_style"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_app_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:singleLine="true"
-            tools:text="app name"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tv_app_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:textColor="#4f4b4c"
+                android:textSize="14dp"/>
 
-        <TextView
-            android:id="@+id/tv_app_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14dp"
-            tools:text="app size"/>
+            <TextView
+                android:id="@+id/tv_app_size"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:textColor="#979797"
+                android:textSize="10dp"/>
+
+        </LinearLayout>
+
+        <com.jb.filemanager.function.trash.adapter.ItemCheckBox
+            android:id="@+id/icb_child_check"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:padding="16dp"
+            android:src="@drawable/choose_none"/>
     </LinearLayout>
-
-    <com.jb.filemanager.function.trash.adapter.ItemCheckBox
-        android:id="@+id/icb_child_check"
-        android:layout_width="48dp"
-        android:layout_height="match_parent"/>
 </LinearLayout>
