--- a/app/src/main/res/layout/dialog_paste_failed.xml
+++ b/app/src/main/res/layout/dialog_paste_failed.xml
@@ -88,7 +88,7 @@
             android:textColor="@color/dialog_confirm_color"
             android:textSize="16dp"
             android:textStyle="bold"
-            android:text="@string/common_ok"/>
+            android:text="@string/common_retry"/>
 
     </LinearLayout>
 
