--- a/app/src/main/res/layout/item_samefile_child.xml
+++ b/app/src/main/res/layout/item_samefile_child.xml
@@ -13,7 +13,8 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_margin="16dp"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
