--- a/app/src/main/res/layout/item_samefile_child.xml
+++ b/app/src/main/res/layout/item_samefile_child.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="SpUsage,ContentDescription"
-    android:id="@+id/ll_music_item_container"
+    android:id="@+id/ll_file_item_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:clickable="true">
 
     <ImageView
         android:id="@+id/iv_music_child_item_cover"
