--- a/app/src/main/res/layout/activity_apk_manager.xml
+++ b/app/src/main/res/layout/activity_apk_manager.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ad_color_8acb29"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context="com.jb.filemanager.function.apkmanager.AppManagerActivity">
 
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/app_manager_title_with_search"/>
+        <include layout="@layout/common_action_bar_without_search_blue_back"/>
 
         <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
             android:id="@+id/elv_apk"
@@ -42,16 +42,4 @@
         android:textStyle="bold"
         android:visibility="gone"/>
 
-    <FrameLayout
-        android:id="@+id/fl_progress_container"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white_50">
-
-        <ProgressBar
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"/>
-    </FrameLayout>
 </RelativeLayout>
