--- a/app/src/main/res/layout/activity_doc_manager.xml
+++ b/app/src/main/res/layout/activity_doc_manager.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/ad_color_8acb29"
+    android:background="@color/white"
     tools:context="com.jb.filemanager.function.docmanager.DocManagerActivity">
 
     <LinearLayout
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/app_manager_title_with_search"/>
+        <include layout="@layout/common_action_bar_without_search_blue_back"/>
 
         <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
             android:id="@+id/elv_apk"
@@ -31,16 +31,4 @@
 
     <include layout="@layout/common_operate_bar_modify"/>
 
-    <FrameLayout
-        android:id="@+id/fl_progress_container"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white_50">
-
-        <ProgressBar
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"/>
-    </FrameLayout>
 </RelativeLayout>
