--- a/app/src/main/res/layout/app_manager_title_with_search.xml
+++ b/app/src/main/res/layout/app_manager_title_with_search.xml
@@ -11,19 +11,14 @@
     tools:background="@color/colorAccent"
     android:background="@android:color/transparent">
 
-    <ImageView
-        android:id="@+id/iv_common_action_bar_back"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:src="@drawable/action_bar_back_drawable_selector"/>
+
 
     <TextView
         android:id="@+id/tv_common_action_bar_with_search_title"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginLeft="36dp"
+        android:drawablePadding="16dp"
+        android:drawableLeft="@drawable/action_bar_back_drawable_selector"
         android:layout_centerVertical="true"
         android:gravity="center"
         android:paddingLeft="16dp"
@@ -31,30 +26,6 @@
         android:textSize="16dp"
         android:textColor="@drawable/action_bar_back_text_selector"
         android:visibility="visible"/>
-
-    <EditText
-        android:id="@+id/et_common_action_bar_with_search_search"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:hint="@string/app_name"
-        android:textColor="#000000"
-        android:layout_marginLeft="52dp"
-        android:layout_marginRight="36dp"
-        android:textSize="16dp"
-        android:inputType="text"
-        android:imeOptions="actionSearch"
-        android:visibility="invisible"/>
-
-    <ImageView
-        android:id="@+id/iv_clear_search_input"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="46dp"
-        android:src="@drawable/ic_cancel"
-        android:visibility="invisible"/>
 
     <ImageView
         android:id="@+id/iv_common_action_bar_with_search_search"
@@ -67,4 +38,9 @@
         android:padding="16dp"
         android:src="@drawable/ic_action_bar_search"/>
 
+    <View
+        android:background="@drawable/main_shadow"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 </RelativeLayout>
