--- a/app/src/main/res/layout/item_app_child.xml
+++ b/app/src/main/res/layout/item_app_child.xml
@@ -13,6 +13,7 @@
         android:id="@+id/iv_app_icon"
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:src="@drawable/app_icon_default"
         android:layout_gravity="center_vertical"
         android:layout_margin="16dp"/>
 
