--- a/app/src/main/res/layout/item_app_child.xml
+++ b/app/src/main/res/layout/item_app_child.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ll_music_item_container"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@color/white"
+    android:background="@drawable/list_item_bg_selector"
     android:orientation="horizontal"
     tools:ignore="SpUsage,ContentDescription">
 
