--- a/app/src/main/res/layout/activity_apk_manager.xml
+++ b/app/src/main/res/layout/activity_apk_manager.xml
@@ -31,14 +31,16 @@
     <TextView
         android:id="@+id/tv_bottom_delete"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
-        android:gravity="center"
-        android:text="Delete"
+        android:drawableTop="@drawable/ic_bottom_delete"
+        android:background="@drawable/app_uninstall_item_selector"
+        android:text="Uninstall"
+        android:gravity="center_horizontal"
         android:textColor="@color/white"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:visibility="gone"/>
+        android:textSize="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="6dp"
+        android:visibility="visible"/>
 
 </RelativeLayout>
