--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="white_8">#14ffffff</color>
     <color name="white_5">#0Cffffff</color>
     <color name="black_40">#66000000</color>
+    <color name="black_15">#26000000</color>
     <color name="black_20">#33000000</color>
     <color name="black_70">#B2000000</color>
 
