--- a/app/src/main/res/layout/activity_doc_manager.xml
+++ b/app/src/main/res/layout/activity_doc_manager.xml
@@ -30,4 +30,9 @@
 
     <include layout="@layout/common_operate_bar_modify"/>
 
+    <com.jb.filemanager.ui.widget.BottomOperateBar
+        android:id="@+id/bob_bottom_operator"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="60dp"/>
 </RelativeLayout>
