--- a/app/src/main/res/layout/fragment_main_storage.xml
+++ b/app/src/main/res/layout/fragment_main_storage.xml
@@ -54,12 +54,13 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/white">
+            android:background="#F5F6FF">
 
             <ListView
                 android:id="@+id/lv_main_storage_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:divider="@color/transparent"
                 android:dividerHeight="0dp"
                 android:footerDividersEnabled="false" />
@@ -67,7 +68,8 @@
             <GridView
                 android:id="@+id/gv_main_storage_grid"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:numColumns="4"
                 android:verticalSpacing="10dp"
                 android:horizontalSpacing="10dp"
