--- a/app/src/main/res/drawable/bg_item_samefile_list_group_style.xml
+++ b/app/src/main/res/drawable/bg_item_samefile_list_group_style.xml
@@ -2,9 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="-2dp" android:left="-2dp" android:right="-2dp">
         <shape>
-            <solid android:color="@color/white"/>
-            <stroke android:color="#e7e9f3"
-                android:width="1dp"/>
+            <solid android:color="@color/list_divider_line_color_e7e9f3"/>
+        </shape>
+    </item>
+    <!-- 此处定义只有上下两边有边框 高度为1像素-->
+    <item android:top="1dp">
+        <!--边框里面背景颜色 白色-->
+        <shape>
+            <solid android:color="#ffffff" />
         </shape>
     </item>
 </layer-list>
