--- a/app/src/main/res/layout/item_samefile_child.xml
+++ b/app/src/main/res/layout/item_samefile_child.xml
@@ -2,62 +2,74 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="SpUsage,ContentDescription"
-    android:id="@+id/ll_file_item_container"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/white"
-    android:clickable="true">
-
-    <ImageView
-        android:id="@+id/iv_music_child_item_cover"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="center_vertical"
-        />
+    android:layout_height="wrap_content"
+    >
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/ll_file_item_container"
         android:orientation="horizontal"
-        android:background="@drawable/bg_item_main_storage_list_style">
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/tv_music_child_item_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:lines="1"
-                android:ellipsize="marquee"
-                android:textColor="#4f4b4c"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/tv_music_child_item_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:lines="1"
-                android:textColor="#979797"
-                android:textSize="10dp" />
-
-        </LinearLayout>
-
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/white"
+        android:clickable="true">
         <ImageView
-            android:id="@+id/iv_music_child_item_select"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            android:gravity="center_vertical"
-            android:padding="16dp"
-            android:src="@drawable/choose_none" />
-    </LinearLayout>
+            android:id="@+id/iv_music_child_item_cover"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_margin="16dp"
+            android:layout_gravity="center_vertical"
+            />
+        <LinearLayout
+            android:id="@+id/ll_item_view_with_divide_line"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="1dp"
+            android:orientation="horizontal"
+            >
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_vertical">
 
+                <TextView
+                    android:id="@+id/tv_music_child_item_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:ellipsize="marquee"
+                    android:textColor="#4f4b4c"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/tv_music_child_item_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:lines="1"
+                    android:textColor="#979797"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/iv_music_child_item_select"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
+                android:padding="16dp"
+                android:src="@drawable/choose_none" />
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_group_divide_space"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/list_divider_line_color_f5f6ff"
+        android:visibility="gone"/>
 
 </LinearLayout>
