--- a/app/src/main/res/layout/item_samefile_group.xml
+++ b/app/src/main/res/layout/item_samefile_group.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="horizontal"
-    android:background="@drawable/bg_item_samefile_list_group_style"
+    android:background="@color/white"
     tools:ignore="UseCompoundDrawables"
     >
 
@@ -13,11 +13,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="12dp"
+        android:layout_marginLeft="16dp"
         android:layout_weight="1"
         android:lines="1"
         android:textColor="#999b98"
-        android:textSize="16sp" />
+        android:textSize="12sp" />
 
     <ImageView
         android:id="@+id/iv_file_group_item_select"
