--- a/app/src/main/res/layout/fragment_main_storage.xml
+++ b/app/src/main/res/layout/fragment_main_storage.xml
@@ -60,7 +60,7 @@
                 android:id="@+id/lv_main_storage_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@color/transparent"
                 android:divider="@color/transparent"
                 android:dividerHeight="0dp"
                 android:footerDividersEnabled="false" />
