--- a/app/src/main/res/layout/item_main_storage_list_style.xml
+++ b/app/src/main/res/layout/item_main_storage_list_style.xml
@@ -5,7 +5,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:minHeight="60dp">
+    android:minHeight="60dp"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_main_storage_style_list_item_icon"
