--- a/app/src/main/res/layout/activity_same_file.xml
+++ b/app/src/main/res/layout/activity_same_file.xml
@@ -36,6 +36,17 @@
             android:layout_height="60dp"
             android:layout_gravity="bottom"
             />
+        <LinearLayout
+            android:id="@+id/ll_no_file"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:text="@string/no_file_hint"/>
+        </LinearLayout>
     </FrameLayout>
 
 
