--- a/app/src/main/res/layout/item_samefile_group.xml
+++ b/app/src/main/res/layout/item_samefile_group.xml
@@ -17,9 +17,9 @@
         android:layout_weight="1"
         android:lines="1"
         android:textColor="#999b98"
-        android:textSize="12sp" />
-
-    <ImageView
+        android:textSize="12sp"
+        tools:ignore="RtlHardcoded" />
+    <com.jb.filemanager.commomview.GroupSelectBox
         android:id="@+id/iv_file_group_item_select"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -28,5 +28,7 @@
         android:gravity="center_vertical"
         android:padding="12dp"
         android:src="@drawable/choose_none"
-        tools:ignore="ContentDescription" />
+        android:layout_alignParentRight="true"
+        android:layout_gravity="right|bottom"
+        tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />
 </LinearLayout>
