处理文档数据库

--- a/app/src/main/res/layout/activity_doc_manager.xml
+++ b/app/src/main/res/layout/activity_doc_manager.xml
@@ -23,9 +23,7 @@
             android:divider="@null"
             android:groupIndicator="@null"
             android:listSelector="@android:color/transparent"
-            android:scrollbars="none">
-
-        </com.jb.filemanager.ui.widget.FloatingGroupExpandableListView>
+            android:scrollbars="none"/>
     </LinearLayout>
 
     <include layout="@layout/common_operate_bar_modify"/>
