--- a/app/src/main/res/layout/item_main_category.xml
+++ b/app/src/main/res/layout/item_main_category.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="111dp"
-    android:background="@color/white">
+    android:background="@drawable/bg_main_category_item">
 
     <ImageView
         android:id="@+id/iv_main_category_icon"
