--- a/app/src/main/res/layout/group_image_result.xml
+++ b/app/src/main/res/layout/group_image_result.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/white"
+                android:orientation="horizontal">
 
     <TextView
         android:id="@+id/group_image_result_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="16dp"
         android:orientation="vertical"
-        android:text="group_image_result_tv"
-        tools:background="@color/ad_color_8acb29"/>
+        tools:text="group_image_result_tv"
+        android:textColor="@color/black_40"
+        android:textSize="@dimen/h5_12"/>
 
     <com.jb.filemanager.commomview.GroupSelectBox
         android:id="@+id/group_image_result_gsb"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
-        android:layout_gravity="right|bottom"/>
+        android:layout_centerVertical="true"
+        android:layout_marginRight="4dp"
+        android:padding="12dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/choose_none"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="#e7e9f3"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
