--- a/app/src/main/res/layout/item_image_result.xml
+++ b/app/src/main/res/layout/item_image_result.xml
@@ -1,18 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="100dp">
+              android:layout_height="wrap_content"
+              android:background="@color/white"
+              android:orientation="vertical">
 
-    <include
-        android:id="@+id/item_image_result_1"
-        layout="@layout/item_sub_image"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
 
-    <include
-        android:id="@+id/item_image_result_2"
-        layout="@layout/item_sub_image"/>
+        <include
+            android:id="@+id/item_image_result_1"
+            layout="@layout/item_sub_image"
+            android:layout_width="0dp"
+            android:layout_height="116dp"
+            android:layout_marginRight="@dimen/image_interval_distance"
+            android:layout_weight="1"/>
 
-    <include
-        android:id="@+id/item_image_result_3"
-        layout="@layout/item_sub_image"/>
+        <include
+            android:id="@+id/item_image_result_2"
+            layout="@layout/item_sub_image"
+            android:layout_width="0dp"
+            android:layout_height="116dp"
+            android:layout_marginRight="@dimen/image_interval_distance"
+            android:layout_weight="1"/>
+
+        <include
+            android:id="@+id/item_image_result_3"
+            layout="@layout/item_sub_image"/>
+
+    </LinearLayout>
+
+    <!--距离底部10dp 正常是6dp-->
+    <android.support.v4.widget.Space
+        android:id="@+id/item_image_result_bottom_space"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 
 </LinearLayout>
