--- a/app/src/main/res/layout/item_sub_image.xml
+++ b/app/src/main/res/layout/item_sub_image.xml
@@ -3,16 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="0dp"
-    android:layout_height="100dp"
+    android:layout_height="116dp"
     android:layout_weight="1"
-    android:orientation="vertical"
-    tools:background="@color/ad_color_8acb29">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/item_sub_image_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
+        tools:visibility="visible"
         android:src="@drawable/ic_about_logo"/>
 
     <View
@@ -20,12 +20,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#7f000000"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
     <com.jb.filemanager.commomview.GroupSelectBox
         android:id="@+id/item_sub_image_gsb"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:padding="8dp"
         android:layout_gravity="right|bottom"
         android:src="@drawable/ic_about_logo"/>
 
