--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -16,4 +16,13 @@
     <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="Pop.Activity.Theme">
         <item name="android:windowTranslucentStatus">false</item>
     </style>
+
+
+    <style name="AppTheme.NoActionBar_TranslucentBar_with_bg" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
