--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="white_50">#7FFFFFFF</color>
+    <color name="white_40">#66FFFFFF</color>
     <color name="white_20">#33ffffff</color>
     <color name="white_60">#99ffffff</color>
     <color name="white_70">#B2ffffff</color>
