--- a/app/src/main/res/drawable-v21/bg_main_category_item.xml
+++ b/app/src/main/res/drawable-v21/bg_main_category_item.xml
@@ -1,6 +1,5 @@
 <ripple android:color="#77777777"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/mask"
-        android:drawable="@color/main_tab_indicator" />
-    <item android:drawable="@android:color/white"/>
+    <item android:id="@android:id/mask" android:drawable="@color/main_category_item_bg_mask" />
+    <item android:drawable="@color/main_category_item_bg_normal"/>
 </ripple>
