--- a/app/src/main/res/drawable-v21/bg_main_category_item.xml
+++ b/app/src/main/res/drawable-v21/bg_main_category_item.xml
@@ -1,5 +1,3 @@
-<ripple android:color="#77777777"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/mask" android:drawable="@color/main_category_item_bg_mask" />
+<ripple android:color="@color/main_category_item_bg_mask" xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/main_category_item_bg_normal"/>
 </ripple>
