--- a/app/src/main/res/drawable/bg_main_category_item.xml
+++ b/app/src/main/res/drawable/bg_main_category_item.xml
@@ -1,4 +1,4 @@
-<selector android:color="#77777777" xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/main_category_item_bg_pressed" android:state_pressed="true" />
     <item android:drawable="@color/main_category_item_bg_normal"/>
 </selector>
